[package]
name = "rusty-hx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
byteorder = "1.5"
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
rc4 = "0.1.0"
hmac = "0.12.1"
sha1 = "0.10.6"
md5 = "0.8.0"
